# schemius

./: .dockerignore  .gitignore  .prettierrc.yml  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  dummy.txt  index.html  rustfmt.toml  schemius.js  schemius.utils.js
.devcontainer/: Dockerfile  aliases  devcontainer.json  setup.sh
.github/: dependabot.yml  deploy-web.yml
.github/workflows/: ci.yaml  ci.yml  continuous-integration.yml  deploy-web.yml  pat-test.yml  publish-web.yml
.waste/: dummy.txt
examples/: basics.scm
pkg/: package.json  schemius_web.d.ts  schemius_web.js  schemius_web_bg.wasm  schemius_web_bg.wasm.d.ts  schemus_web.js  schemus_web_bg.wasm
schemius/: Cargo.toml
schemius-native/: Cargo.toml
schemius-native/src/: main.rs
schemius-web/: Cargo.toml  package-lock.json  package.json  schemius-web.html  schemius.html  schemius.js  schemius.utils.js
schemius-web/src/: lib.rs
schemius/src/: lib.rs
schemius/src/core/: accessor.rs  builtins.rs  constants.rs  environment.rs  evaluator.rs  interpreter.rs  mod.rs  reader.rs  tests.rs
schemius/src/core/builtins/: base.rs  base_procs.rs  boolean_procs.rs  booleans.rs  list_procs.rs  lists.rs  mod.rs  number_procs.rs  special_forms.rs  string_procs.rs  strings.rs
schemius/src/core/s_expression/: mod.rs  s_list.rs  s_number.rs  s_procedure.rs  s_wrapper.rs
schemius/src/scheme/: prelude.rs
schemius/tests/: common.rs  r7rs_compliance.rs  sparse.rs
schemus/: Cargo.toml
schemus-native/: Cargo.toml
schemus-web/: Cargo.toml  schemus-web.html
src/: main.rs
(+8 files in other folders)
