[package]
name = "schemus"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.11", features = ["derive"] }
lazy_static = "1.4.0"
num = "0.4"
regex = "1"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
