[package]
name = "schemius"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
cfg-if = "1.0"
num = "0.4"
regex = "1.12"

[features]
default = ["f64", "i64"]
f32 = []
f64 = []
i32 = []
i64 = []
i128 = []
true_list = []

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
